Test/Test/userdoc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-sourcepath
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test
-d
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\userdoc
-encoding
UTF-8
-charset
UTF-8
-doctitle
Test
-windowtitle
Test
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
http://download.oracle.com/javase/8/docs/api/
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test/Player.java
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test/Magister.java
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test/Prodigium.java
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test/SaveManager.java
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test/Map.java
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test/ElementTable.java
<---- end of javadoc command ---->
Loading source file D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Player.java...
Loading source file D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Magister.java...
Loading source file D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Prodigium.java...
Loading source file D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\SaveManager.java...
Loading source file D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Map.java...
Loading source file D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\ElementTable.java...
Constructing Javadoc information...
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Prodigium.java:149: error: enum Type is public, should be declared in a file named Type.java
public enum Type { Earth, Water, Fire, Wind }
       ^
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\SaveManager.java:47: error: modifier private not allowed here
private class GameData
        ^
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Player.java:1: error: package org.json does not exist
import org.json.JSONObject;
               ^
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Player.java:2: error: package org.json does not exist
import org.json.JSONArray;
               ^
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Player.java:12: error: cannot find symbol
    private Room aCurrentRoom;
            ^
  symbol:   class Room
  location: class Player
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Player.java:28: error: cannot find symbol
    public Room getRoom()
           ^
  symbol:   class Room
  location: class Player
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Player.java:37: error: cannot find symbol
    public JSONObject toJSONObject()
           ^
  symbol:   class JSONObject
  location: class Player
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Prodigium.java:1: error: package org.json does not exist
import org.json.JSONObject;
               ^
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Prodigium.java:128: error: cannot find symbol
    public JSONObject toJSONObject(){
           ^
  symbol:   class JSONObject
  location: class Prodigium
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\SaveManager.java:1: error: package org.json does not exist
import org.json.JSONObject;
               ^
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Map.java:1: error: package org.json does not exist
import org.json.JSONObject;
               ^
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Map.java:2: error: package org.json does not exist
import org.json.JSONArray;
               ^
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Map.java:12: error: cannot find symbol
    private Room[] aRooms;
            ^
  symbol:   class Room
  location: class Map
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\Map.java:27: error: cannot find symbol
    public JSONObject toJSONObject()
           ^
  symbol:   class JSONObject
  location: class Map
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\ElementTable.java:9: error: cannot find symbol
    private Hashtable aElementTable;
            ^
  symbol:   class Hashtable
  location: class ElementTable
D:\Utilisateurs\Documents\00 - École\1ère année\IPO\Test\Test\ElementTable.java:27: error: cannot find symbol
    public ElementTable(final Hashtable pTable)
                              ^
  symbol:   class Hashtable
  location: class ElementTable
16 errors
